--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="“Pragma”" content="”no-cache”" />
 	<meta http-equiv="“Expires”" content="”-1″" />
 	<meta http-equiv="“CACHE-CONTROL”" content="”NO-CACHE”" />
+	<base href="\">
 
 	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -23,7 +24,7 @@
 <body>
 
 <div class="wrapper">
-	
+
 	<div class="container mt-2">
 		<div class="row">
 			<div class="col-xs-12 col-sm-9 d-flex align-items-center">
@@ -46,56 +47,26 @@
 
 	<section class="hero my-3">
 
-
-
-		
 		<div class="container">
 			<div class="row">
 
-				<div class="col-xs-12 col-sm-6 mt-2">
+				<div class="col-xs-12 col-sm-6 mt-2 pb-3">
 					<label for="locations" class="form-label mb-0">Locations</label>
-					<select id="locations" class="form-select form-select-sm">
-						<option value="Loading...">Loading...</option>
-					</select>
+					<select id="locations" class="form-select form-select-sm"></select>
 				</div>
+
+				<p id="loader" class="mt-3" style="display: none;">Loading weather data...</p>
+				<div id="error"></div>
 			</div>
 		</div>
 
 		<div class="container-fluid">
-			<div id="loader" class="my-3">Loading...</div>
-			<div id="error"></div>
-
 			<div id="weather" class="d-md-flex">
-				<div class="card-container flex-fill">
-					<div class="card">Dynamic theme content goes here!</div>
-				</div>
-				<div class="card-container flex-fill">
-					<div class="card">Dynamic theme content goes here!</div>
-				</div>
-				<div class="card-container flex-fill">
-					<div class="card">Dynamic theme content goes here!</div>
-				</div>
-				<div class="card-container flex-fill">
-					<div class="card">Dynamic theme content goes here!</div>
-				</div>
-				<div class="card-container flex-fill">
-					<div class="card">Dynamic theme content goes here!</div>
-				</div>
-				<div class="card-container flex-fill">
-					<div class="card">Dynamic theme content goes here!</div>
-				</div>
-				<div class="card-container flex-fill">
-					<div class="card">Dynamic theme content goes here!</div>
-				</div>
-				
-			</div>
 
+			</div>
 		</div>
 
 	</section>
-
-		<!-- <button class="btn button-primary">Primary Button</button>
-		<button class="btn button-secondary">Secondary Button</button> -->
 
 </div>
 
