--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 	<meta http-equiv="“Pragma”" content="”no-cache”" />
 	<meta http-equiv="“Expires”" content="”-1″" />
 	<meta http-equiv="“CACHE-CONTROL”" content="”NO-CACHE”" />
-	<base href="\">
+	<!-- <base href="\"> -->
 
-	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 	<link rel="stylesheet"
@@ -61,28 +60,24 @@
 		</div>
 
 		<div class="container-fluid">
-			<div id="weather" class="d-md-flex">
-
-			</div>
+			<div id="weather" class="d-md-flex"></div>
 		</div>
 
 	</section>
-
 </div>
 
-
-	<footer class="container">
-		<div class="row">
-			<p class="col text-center">
-				© Copyright 2024 Something, something, something Dark Side.
-			</p>
-		</div>
-	</footer>
+<footer class="container">
+	<div class="row">
+		<p class="col text-center">
+			© Copyright 2024 Something, something, something Dark Side.
+		</p>
+	</div>
+</footer>
 </body>
 
 <!-- Our codes -->
-<script src="js/apiservice.js" type="module"></script>
-<script src="js/viewmodel.js" type="module"></script>
-<script src="js/main.js" type="module"></script>
+<script src="./js/apiservice.js" type="module"></script>
+<script src="./js/viewmodel.js" type="module"></script>
+<script src="./js/main.js" type="module"></script>
 
 </html>
