--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <footer class="container">
 	<div class="row">
 		<p class="col text-center">
-			© Copyright 2024 Something, something, something Dark Side.
+			&copy; Copyright <span id="currentYear"></span> Something, something, something Dark Side.
 		</p>
 	</div>
 </footer>
